<resources>
    <string name="app_name">WorkoutApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="test_home_fragment_text">This is the home page</string>
    <string name="test_workout_fragment_text">This is the workout page</string>
    <string name="test_statistics_fragment_text">This is the statistics page</string>
    <string name="test_settings_fragment_text">This is the settings page</string>
    <string name="home_button">Home</string>
    <string name="workout_button">Workout</string>
    <string name="statistics_button">Statistics</string>
    <string name="settings_button">Settings</string>
    <string name="name_text">Name: </string>
    <string name="first_name_text">First Name: </string>
    <string name="last_name_text">Last Name: </string>
    <string name="email_text">Email: </string>
    <string name="age_text">Age: </string>
    <string name="height_text">Height: </string>
    <string name="weight_text">Weight: </string>
    <string name="goals_profile_text">Goals: </string>
    <string name="default_first_name_text">
        <font size="14">
            John (required)
        </font>
    </string>
    <string name="default_last_name_text">
        <font size="14">
            Doe (required)
        </font>
    </string>
    <string name="default_email_text">
        <font size="14">
            JDoe@Gmail.com (required)
        </font>
    </string>
    <string name="goals_text">
        What is your fitness goal?
    </string>
    <string name="weight_loss_text">Weight Loss</string>
    <string name="muscle_building_text">Muscle Building</string>
    <string name="strength_building_text">Strength Building</string>
    <string name="maintenance_text">Maintenance</string>
    <string name="create_button_text">Create</string>
    <string name="default_optional_text">
        <font size="14">
            (optional)
        </font>
    </string>
    <string name="default_feet_optional_text">
        <font size="14">
            ft (optional)
        </font>
    </string>
    <string name="default_inch_optional_text">
        <font size="14">
            in (optional)
        </font>
    </string>
    <string name="radio_weight_text">
        <font size="14">
            lbs (optional)
        </font>
    </string>
    <string-array name="graphTypes">
        <item>Workout Duration</item>
        <item>Calorie Loss</item>
        <item>Workout Sets</item>
        <item>Workout Reps</item>
    </string-array>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="feet_text">Feet</string>
    <string name="inch_text">Inches</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn">button</string>
    <string name="search_button">Search_button</string>
    <string name="textview">TextView</string>
    <string name="user_sp">userSharedPreference</string>
    <string name="user_data_key">userData</string>
</resources>